--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "gatsby": "^2.19.12",
+    "babel-plugin-styled-components": "^1.10.7",
+    "gatsby": "^2.20.29",
+    "gatsby-plugin-styled-components": "^3.2.3",
     "graphql": "^14.6.0",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "dev": "gatsby develop --port 3000",
